🔧Fixed up colors and dark mode

--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,9 @@ body {
   font-family: "Open Sans", sans-serif;
   font-size: 1.5em;
   margin: 0;
-  background-color: #42464d;
-  color: #fff;
+  background-color: #F4A261;
+  color: #080278;
+  font-weight: 900;
 }
 
 .nav {
@@ -36,15 +37,16 @@ body {
 .aboutBtn {
   width: 80%;
   padding: 10px;
-  border-color: white;
+  border-color: #080278;
+  font-size: 1.5em;
 }
 
 button {
   transition: background-color .2s linear,color .2s linear;
   font-size: large;
   font-weight: 700;
-  background-color: #42464d;
-  color: #fff;
+  background-color: #F4A261;
+  color: #080278;
 }
 
 button:hover {
@@ -58,8 +60,11 @@ button:hover {
   align-items: center;
 }
 
+.buffer {
+  height: 100px;
+}
+
 .cover {
-  /* background-color: rgb(133, 255, 231); */
   text-align: center;
   width: 100vw;
   height: 100vh;
@@ -71,11 +76,12 @@ textarea {
   justify-content: center; */
   text-align: center;
   width: 100%;
-  height: 50px;
+  height: 100px;
   font-weight: bold;
-  font-size: 40px;
-  background-color: #42464d;
-  color: #fff;
+  font-size: 3em;
+  background-color: #F4A261;
+  color: #080278;
+  border: 50px;
 }
 
 /* .inpTask {
@@ -90,7 +96,7 @@ textarea {
   padding: 5px;
 
   transition: 1s ease-in-out;
-  
+  transition: visibility 0s, opacity 0.5s linear;
 
 }
 
